schema/testdata/validation_invalid_ctx_access/schema.keel
model Profile {
  fields {
    identity Identity
  }

  @permission(
    expression: profile.identity == ctx.identity,
    actions: [get]
  )
}
