schema/testdata/errors/expression_preserving_spaces_and_tabs.keel
model Person {
    @permission(
        //expect-error:62:63:AttributeExpressionError:field 'unknown' does not exist
        expression:    ctx.isAuthenticated          ==    ctx.unknown,
        actions: [get]
    )
}